revised interaction with TB model

--- a/research.tex
+++ b/research.tex
@@ -312,7 +312,7 @@ Ongoing work additionally involves upcoming experiments at the SLAC National Acc
 \begin{figure}[ht]
 	\centering\includegraphics[width=1.0\linewidth]{figures/NiPS3}
 	\caption{
-		(left)  Measured THz electric field waveform emitted from NiPS3 antiferromagnetic sample under femtosecond \(400~\mathrm{nm}\) excitation.
+		(left)  Measured THz electric field waveform emitted from \(\mathrm{NiPS_3}\) antiferromagnetic sample under femtosecond \(400~\mathrm{nm}\) excitation.
 		(right) Peak THz emission amplitude as a function of temperature, showing strong enhancement at the Neel temperature (\(155~\mathrm{K}\)), showing direct sensitivity to time-dependent magnetization.
 	}
 	\label{fig:NiPS3}
@@ -320,13 +320,13 @@ Ongoing work additionally involves upcoming experiments at the SLAC National Acc
 
 In conjunction with this experimental work, {\bf Tan} and {\bf Pemmaraju} are investigating a number of theoretical approaches to this problem.
 First, static, first-principles density functional theory are used to solve for the electronic structure, phononic properties, and electron-phonon interactions of the \(\mathrm{NiPS_3}\) materials system. 
-Second, the RT-TDDFT approach will be used to directly simulate density and spin fluctuations in time using the INQ code.
+Second, the RT-TDDFT approach will be used to directly simulate density and spin fluctuations in time using the \textsc{inq} code.
 The evolution of the calculated diffraction intensities of the spin, charge and orbital patterns will provide dynamics of the order parameters to assist the experimental time-resolved diffraction study.
 Trajectories will be examined to understand the structural and electronic mechanisms behind the evolution of spin order peaks, and their associated time scales. 
 Finally, the RT-TDDFT simulations will provide data for parameterization of a model for long-wavelength magnon simulations. 
-This semi-classical approach involves the construction of an effective spin Hamiltonian consisting of Zeeman, exchange and anisotropic magnetic interactions, with parameters extracted from the INQ code. 
+This semi-classical approach involves the construction of an effective spin Hamiltonian consisting of Zeeman, exchange and anisotropic magnetic interactions, with parameters extracted from the \textsc{inq} code. 
 This Hamiltonian will be solved for large magnetic supercell to produce the spin-wave dispersions. 
-Development of this model will be accelerated by the team’s recent experience with similar models for 2D TMDCs and manganites~\cite{Siddiqui2020, Rajpurohit2020}. 
+Development of this model will be accelerated by the team's recent experience with similar models for 2D TMDCs and manganites~\cite{Siddiqui2020, Rajpurohit2020}. 
 As a by-product of this work, the \textsc{inq} code will contain an interface that will facilitate user extraction of parameters for model simulations.
 
 \subsubsection{Halide Perovskites/Photovoltaics/Exciton dynamics}
