Updates from Overleaf

--- a/Tadashi_Refs.bib
+++ b/Tadashi_Refs.bib
@@ -613,3 +613,70 @@ isbn="978-3-030-50371-0"
 	note = {Publisher: American Institute of Physics},
 	pages = {194113}
 }
+
+@article{Caviglia2013,
+  title = {Photoinduced melting of magnetic order in the correlated electron insulator NdNiO${}_{3}$},
+  author = {Caviglia, A. D. and F\"orst, M. and Scherwitzl, R. and Khanna, V. and Bromberger, H. and Mankowsky, R. and Singla, R. and Chuang, Y.-D. and Lee, W. S. and Krupin, O. and Schlotter, W. F. and Turner, J. J. and Dakovski, G. L. and Minitti, M. P. and Robinson, J. and Scagnoli, V. and Wilkins, S. B. and Cavill, S. A. and Gibert, M. and Gariglio, S. and Zubko, P. and Triscone, J.-M. and Hill, J. P. and Dhesi, S. S. and Cavalleri, A.},
+  journal = {Phys. Rev. B},
+  volume = {88},
+  issue = {22},
+  pages = {220401},
+  numpages = {5},
+  year = {2013},
+  month = {Dec},
+  publisher = {American Physical Society},
+  doi = {10.1103/PhysRevB.88.220401},
+  url = {https://link.aps.org/doi/10.1103/PhysRevB.88.220401}
+}
+
+
+@article{Giovannetti2009,
+	title = {Multiferroicity in {Rare}-{Earth} {Nickelates} \${R}\{{\textbackslash}mathrm\{{NiO}\}\}\_\{3\}\$},
+	volume = {103},
+	url = {https://link.aps.org/doi/10.1103/PhysRevLett.103.156401},
+	doi = {10.1103/PhysRevLett.103.156401},
+	number = {15},
+	urldate = {2021-05-14},
+	journal = {Physical Review Letters},
+	author = {Giovannetti, Gianluca and Kumar, Sanjeev and Khomskii, Daniel and Picozzi, Silvia and van den Brink, Jeroen},
+	month = oct,
+	year = {2009},
+	note = {Publisher: American Physical Society},
+	pages = {156401}
+}
+
+@article{Beyerlein2018,
+	title = {Time-spliced {X}-ray diffraction imaging of magnetism dynamics in a {NdNiO3} thin film},
+	volume = {115},
+	copyright = {© 2018 . http://www.pnas.org/site/aboutpnas/licenses.xhtmlPublished under the PNAS license.},
+	issn = {0027-8424, 1091-6490},
+	url = {https://www.pnas.org/content/115/9/2044},
+	doi = {10.1073/pnas.1716160115},
+	language = {en},
+	number = {9},
+	urldate = {2021-06-11},
+	journal = {Proceedings of the National Academy of Sciences},
+	author = {Beyerlein, Kenneth R.},
+	month = feb,
+	year = {2018},
+	pmid = {29440492},
+	note = {Publisher: National Academy of Sciences
+Section: Physical Sciences},
+	keywords = {antiferromagnetism, coherent X-ray diffraction imaging, midinfrared laser, oxide heterostructure, resonant X-ray diffraction},
+	pages = {2044--2048}
+}
+
+@article{Hampel2017,
+	title = {Interplay between breathing mode distortion and magnetic order in rare-earth nickelates \${R}\{{\textbackslash}mathrm\{{NiO}\}\}\_\{3\}\$ within \${\textbackslash}mathrm\{{DFT}\}+{U}\$},
+	volume = {96},
+	url = {https://link.aps.org/doi/10.1103/PhysRevB.96.165130},
+	doi = {10.1103/PhysRevB.96.165130},
+	number = {16},
+	urldate = {2021-06-11},
+	journal = {Physical Review B},
+	author = {Hampel, Alexander and Ederer, Claude},
+	month = oct,
+	year = {2017},
+	note = {Publisher: American Physical Society},
+	pages = {165130}
+}
