--- a/research.tex
+++ b/research.tex
@@ -330,12 +330,11 @@ Development of this model will be accelerated by the team's recent experience wi
 As a by-product of this work, the \textsc{inq} code will contain an interface that will facilitate user extraction of parameters for model simulations.
 
 \subsubsection{Demagnetization in optically excited Perovskites Nickelates}
-The rare earth perovskite nikelates RNiO$_3$ are host to   Another example is the melting of antiferromagentic order in
-photoexcited nickelates within a few picoseconds~\cite{Caviglia2013}, suggested to be
+The rare earth perovskite nikelates RNiO$_3$ are host to a number of unique structural, electronic and magnetic transitions~\cite{Giovannetti2009,Hampel2017,Beyerlein2018}. The melting of the low-temperature antiferromagentic order in photoexcited nickelates within a few picoseconds~\cite{Caviglia2013}, suggested to be
 directly linked to the melting of charge order.
 The process of charge order melting due to the instantaneous 
 redistribution of charge carriers during photoexcitation process is a target for real-time TDDFT simulation.
-\cite{Giovannetti2009,Hampel2017,Beyerlein2018}
+
 
 Ni3+ ions 3d7 t2g6 eg1
 This structural transition involves splitting of Ni into two inequivalent sites, surprisingly no jahn-teller distortion.
